# cmaqml

./: .gitignore  Blend.ipynb  HOWTO.md  MANIFEST.in  README.md  Working.ipynb  config.json  prod.sh  pyproject.toml  run.sh  setup.cfg  setup.py  validate.sh
cmaqml/: __init__.py  __main__.py  driver.py  opts.py
cmaqml/models/: __init__.py  voronoi.py
cmaqml/obs/: __init__.py  aqs.py
examples/: Working.ipynb
examples/input/: O3_8HRMAX.LST.Y_24.2016fh.v531.108US2.5-9.nc
input/: GRIDDESC  dailyavg.LST.Y_24.2016fh.v531.108US2.01.nc  gpw_v4_une_atotpopbt_densy_108US2.IOAPI.nc  make_test.py
scripts/: blend.py  cmaq_uk.py  fitting.py  loadobs.py  make_maps.py  models.py  opts.py  validate.py  validate_figs.py  validate_stats.py
src/cmaqml/: __init__.py  __main__.py  driver.py  opts.py
src/cmaqml/models/: __init__.py  naturalneighbor.py  voronoi.py
src/cmaqml/obs/: __init__.py  aqs.py
src/cmaqml/testcase/: __init__.py
src/cmaqml/testcase/input/: GRIDCRO2D.108US2.35L.160101.nc  config.json  make_test.py
