[metadata]
name = cmaqml
version = 0.2.1
author = Barron Henderson
author_email = barronh@gmail.com
description = A simple package for applying Machine Learnign to CMAQ and associated obs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barronh/cmaqml
project_urls =
    Bug Tracker = https://github.com/barronh/cmaqml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cmaqml = 
   py.typed
   *txt
   *json
   *nc
   *zip

